[tool.poetry]
name = "widget-bank"
version = "0.1.0"
description = ""
authors = ["Rum <rum@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
mypy = "^2.1.0"
flake8 = "^7.3.0"
black = "^26.5.1"
isort = "^8.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
pytest-cov = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
)
'''
# явно указываем версию Python
target-version = ['py312']
color = true
# показывать прогресс (можно true для CI)
quiet = true

[tool.mypy]
python_version = "3.12"
show_error_codes = true
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
ignore_errors = true

[tool.isort]
# максимальная длина строки
line_length = 119